--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: "Roboto Slab", sans-serif;
   margin: 0;
-  padding: 10px 0 0 0;
+  padding: 10px 0 20px 0;
 }
 
 h1 a:link {
